[kotlin] K2: support scratch files
^KTIJ-30385 Fixed

GitOrigin-RevId: 501dc71aa2638bbaf311bd5144e18d7aa5ee38a2